## next

## 1.71
[api] #97 REST calls should return error messages
[api] #95 REST /search should not accept query flags in 'query-string'
[api] #92 Uniform use to flag names in error messages
[api] #91 REST API /search puts flags in <Parameters> section in the same format as they were received in the request
[api] #87 Fixed error on NOOP update via REST API
[api] #86 Fixed email address filtering
[api] #89 Maintenance mode should return error on Syncupdates and REST API
[api] Created REST Client module
[api] Added authentication support for REST lookups
[api] log HTTP headers in update audit log
[update] Allow import-via/export-via rpsl attributes - Job Snijders <job@atrato.com>

## 1.70.1 (deployed on 2013-11-21)
[all] Fixed MySQL replication issue

## 1.70 (deployed on 2013-11-14)
[update] DIFF keyword no longer supported
[api] added service element in responses
[api] added GETter for the abuse contact creation service
[update] mail updates not processed if they have an invalid email address, notifications failing loggingly for the same reason
[logsearch] switched to lucene 4.4 from 4.1.
[query] added option --valid-syntax and --no-valid-syntax
[query] added comment if no abuse contact registered.
[oneshot] added autnum cleanup
[api] renamed abuse-finder to abuse-contact (also changed references on DbWebWar abusefinder branch)
[api] added abuse contact creation helper rest call
[api] moved apikeys from properties to acl database
[api] Updated to Lucene 4.4
[api] removed xml-related 'xlink:' prefix from locators in JSON output
[api] normalize ip addresses
[api] dropped external/internal notion of servers; config port.api replaces port.api.*
[all] removed useless thread_id, prev_serial, serial fields and dropped unused tables from SQL schema
[all] merged pending and scheduler databases into internals
[all] added table authoritative_data to interals database
[all] dailyscheduledtasks now runs distributed in the cluster