@@ -72,7 +72,7 @@ whois.maintainers.dbm=RIPE-DBM-MNT,RIPE-NCC-LOCKED-MNT,RIPE-DBM-STARTUP-MNT,RIPE
 whois.db.driver=com.mysql.jdbc.Driver
 
 whois.db.master.driver=net.ripe.db.whois.common.jdbc.driver.LoggingDriver
-whois.db.master.url=jdbc:log:mysql://localhost/WHOIS_LOCAL;driver=com.mysql.jdbc.Driver;logger=loggingHandlerAdapter
+whois.db.master.url=jdbc:log:mysql://localhost/WHOIS_LOCAL;driver=com.mysql.jdbc.Driver
 whois.db.master.username=dbint
 whois.db.master.password=
 
