@@ -8,20 +8,22 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.ArgumentMatcher;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 import org.springframework.jdbc.support.JdbcUtils;
 
-import java.sql.*;
+import java.sql.Connection;
+import java.sql.DriverPropertyInfo;
+import java.sql.SQLException;
 import java.util.Properties;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
-import static org.mockito.Matchers.argThat;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.greaterThanOrEqualTo;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
 
 @RunWith(MockitoJUnitRunner.class)
 public class LoggingDriverTest {
@@ -54,66 +56,9 @@ public class LoggingDriverTest {
         assertFalse(subject.acceptsURL(null));
     }
 
-    @Test
-    public void connect_ps() throws Exception {
-        connection = subject.connect("jdbc:log:mysql://localhost;driver=com.mysql.jdbc.Driver;logger=" + TestLoggingHandler.class.getName(), properties);
-        assertNotNull(connection);
-
-        final String query = "SELECT 1 FROM DUAL";
-        final PreparedStatement ps = connection.prepareStatement(query);
-        final ResultSet resultSet = ps.executeQuery();
-        resultSet.next();
-
-        JdbcUtils.closeResultSet(resultSet);
-
-        verifyInfo(query);
-    }
-
-    @Test
-    public void connect_stmt() throws Exception {
-        connection = subject.connect("jdbc:log:mysql://localhost;driver=com.mysql.jdbc.Driver;logger=" + TestLoggingHandler.class.getName(), properties);
-        assertNotNull(connection);
-
-        final String query = "SELECT 1 FROM DUAL";
-        final Statement stmt = connection.createStatement();
-        final ResultSet resultSet = stmt.executeQuery(query);
-        resultSet.next();
-        JdbcUtils.closeResultSet(resultSet);
-
-        verifyInfo(query);
-    }
-
-    private void verifyInfo(final String query) {
-        verify(loggingHandler, times(1)).log(argThat(new ArgumentMatcher<StatementInfo>() {
-            @Override
-            public boolean matches(final Object argument) {
-                final StatementInfo statementInfo = (StatementInfo) argument;
-
-                assertThat(statementInfo.getSql(), is(query));
-                assertThat(statementInfo.getParameters().entrySet(), hasSize(0));
-
-                return true;
-            }
-        }), argThat(new ArgumentMatcher<ResultInfo>() {
-            @Override
-            public boolean matches(final Object argument) {
-                final ResultInfo resultInfo = (ResultInfo) argument;
-
-                assertThat(resultInfo.getRows(), hasSize(1));
-
-                return true;
-            }
-        }));
-    }
-
     @Test(expected = IllegalArgumentException.class)
     public void connect_no_driver() throws Exception {
         subject.connect("jdbc:log:mysql://localhost;logger=" + TestLoggingHandler.class.getName(), new Properties());
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void connect_no_logger() throws Exception {
-        subject.connect("jdbc:log:mysql://localhost;driver=com.mysql.jdbc.Driver", new Properties());
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -124,11 +69,6 @@ public class LoggingDriverTest {
     @Test(expected = IllegalArgumentException.class)
     public void connect_invalid_driver() throws Exception {
         connection = subject.connect("jdbc:log:mysql://localhost;driver=java.lang.String;logger=" + TestLoggingHandler.class.getName(), new Properties());
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void connect_logger_not_properly_specified() throws Exception {
-        connection = subject.connect("jdbc:log:mysql://localhost;driver=com.mysql.jdbc.Driver;logger=", new Properties());
     }
 
     public void connect_unsupported_url() throws SQLException {
@@ -158,11 +98,6 @@ public class LoggingDriverTest {
     }
 
     public static class TestLoggingHandler implements LoggingHandler {
-        @Override
-        public boolean canLog() {
-            return true;
-        }
-
         @Override
         public void log(StatementInfo statementInfo, ResultInfo resultInfo) {
             currentLoggingHandler.log(statementInfo, resultInfo);
